--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,3 @@
 <resources>
-    <string name="app_name">AppWidgetDemo</string>
+    <string name="app_name" translatable="false">AppWidget Demo 101</string>
 </resources>
